fixed #49 (#17)
register && auth api
